--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,8 @@ dependencies:
   provider: ^4.0.4
   progress_dialog: ^1.2.1
   firebase_messaging:  ^6.0.13
+  intl: ^0.16.1
+  shared_preferences: ^0.5.6+3
 
   
   
